styled the recipe overview screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
+<div class="background"></div>
 <div class="menu-bar-container">
   <app-menu-bar></app-menu-bar>
 </div>
 <div class="content-container">
-  <router-outlet></router-outlet>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <div class="footer-bar-container">
-<app-footer-bar></app-footer-bar>
+  <app-footer-bar></app-footer-bar>
 </div>
