--- a/src/app/authentication/logon/logon.component.html
+++ b/src/app/authentication/logon/logon.component.html
@@ -11,7 +11,7 @@
       <span *ngIf="submitted && errorMessage">{{errorMessage}}</span>
     </div>
     <div class="form-submit">
-      <button type="submit" name="connectButton" id="connectButton">connect</button>
+      <button type="submit" name="connectButton" id="connectButton">login</button>
     </div>
   </form>
 </div>
