--- a/src/app/recipe/recipe-overview/recipe-overview.component.scss
+++ b/src/app/recipe/recipe-overview/recipe-overview.component.scss
@@ -1,3 +1,61 @@
-th {
+.recipe-overview-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 5vw;
+  justify-content: space-between;
+}
+
+
+.recipe-item {
   cursor: pointer;
+  align-content: space-between;
+  text-align: justify;
+  text-justify: inter-word;
+  width: 20vw;
+  margin: 1.5vw 1.5vw;
+  padding: 2vw 2vw;
+  border: 0.5px solid lightgrey;
+  border-radius: 5px;
+
+
+  .recipe-name {
+    font-weight: bold;
+    font-size: 1.5vw;
+    margin-bottom: 1vw;
+  }
+
+  .recipe-description {
+    font-style: italic;
+    font-size: 1vw;
+    margin-bottom: 1vw;
+  }
+
+  .recipe-servings {
+    text-align: right;
+  }
+}
+
+.recipe-item:hover {
+  background-color: lightgrey;
+}
+
+.create-button {
+  position: fixed;
+  bottom: 5vw;
+  margin-bottom: 2vw;
+  color: var(--primary-color);
+  border: 0.5px solid lightgrey;
+  border-radius: 5px;
+  padding: 1vw;
+  width: auto;
+}
+
+.create-button:hover {
+  border: 0.5px solid var(--primary-color);
+  box-shadow: 0 2px 4px 0 lightgrey;
+  background: white;
 }
