--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,18 +3,19 @@
   margin: 0 1rem;
   position: sticky;
   top: 0;
+  left: 0;
   height: 4vw;
   background: white;
   padding-bottom: 1vw;
-  border-bottom: 5px ridge var(--primary-color);
 }
-
 .content-container {
   margin: 0 1rem;
   height: auto;
-  margin-bottom: 50vw;
+  margin-bottom: 30vw;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90vw;
 }
-
 .footer-bar-container {
   position: sticky;
   margin-top: 2vw;
