--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -13,7 +13,7 @@
       <span *ngIf="submitted && email.invalid && email.errors.pattern">Please provide a valid email address.</span>
     </div>
     <div class="form-submit">
-      <button type="submit" id="createButton">create</button>
+      <button type="submit" id="createButton">create account</button>
     </div>
   </form>
 </div>
