--- a/src/app/menu-bar/menu-bar.component.scss
+++ b/src/app/menu-bar/menu-bar.component.scss
@@ -24,15 +24,11 @@
   }
 }
 
-
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -44,7 +40,6 @@
 
 }
 
-/* Links inside the dropdown */
 .dropdown-content .link {
   color: black;
   padding: 12px 16px;
@@ -52,19 +47,25 @@
   display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content .link:hover {
   background-color: var(--primary-color);
   color: white;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
   color: white;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: var(--primary-color);
+}
+
+.border {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.5vw;
+  width: 100%;
+  min-height: 0.5vw;
+  background: linear-gradient(to right, white, var(--primary-color), white);
 }
