Correction link to the shoppinglist-overview

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -9,7 +9,7 @@
     <div class="dropdown">
       <button class="navigation-button" routerLink="overview">Shoppinglists</button>
       <div class="dropdown-content">
-        <a routerLink="overview">My shopping lists</a>
+        <a routerLink="shoppinglist-overview">My shopping lists</a>
         <a routerLink="create-shoppinglist">Create shoppinglist</a>
       </div>
     </div>
