s8-recipe are now searchable

--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -4,7 +4,7 @@
   <div class="recipe-description">
     {{ recipe.description }}
   </div>
-  <table *ngIf="recipe.entries">
+  <table>
     <tr>
       <th>Product</th>
       <th>Quantity</th>
