--- a/src/app/recipe/create-recipe/create-recipe.component.scss
+++ b/src/app/recipe/create-recipe/create-recipe.component.scss
@@ -1,7 +1,11 @@
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .recipe-form {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   flex-wrap: wrap;
 
   .form-section {
@@ -18,4 +22,19 @@
 textarea {
   width: 300px;
   height: 150px;
+}
+
+.add-products {
+
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+  height: 5vw;
+  align-items: center;
+}
+
+.recipe-products {
+  overflow: auto;
+  max-height: 75vh;
 }
