--- a/src/app/recipe/create-recipe/create-recipe.component.scss
+++ b/src/app/recipe/create-recipe/create-recipe.component.scss
@@ -11,6 +11,15 @@
   .form-section {
     width: 50%;
   }
+
+  .input-title {
+    font-size: 1.5vw;
+    font-weight: bold;
+  }
+
+  .input-field {
+    margin-bottom: 4vw;
+  }
 }
 
 .text-danger {
