--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 90vw;
+  min-height: 100vh;
 }
 
 .footer-bar-container {
@@ -24,5 +25,6 @@
   bottom: 0;
   background: var(--primary-color);
   min-height: 5vw;
+  max-height: 5vw;
   height: 5vw;
 }
