--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
@@ -4,6 +4,9 @@
       <div class="row">
         <div class="table-title">My shopping lists</div>
       </div>
+      <div class="table-element" style="font-style: italic; margin-left: 1.5vw;" *ngIf="shoppingLists.length==0">
+        You don't have any shoppinglists yet! Click the '+' button to create one.
+      </div>
       <div *ngFor="let shoppingList of shoppingLists" class="table-row row">
         <div class="shoppinglist-name table-element">{{shoppingList.name}}</div>
         <div class="table-button">
