--- a/src/app/recipe/create-recipe/create-recipe.component.html
+++ b/src/app/recipe/create-recipe/create-recipe.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="input-title">Recipe instructions</div>
       <label>
-      <textarea rows="5" cols="60" name="description" id="description"
+      <textarea name="description" id="description"
                 formControlName="description" (click)="resetErrors()">
         </textarea>
       </label>
@@ -30,11 +30,11 @@
     </div>
     <div class="recipe-products form-section">
       <div class="table-title">Products</div>
-      <div class="table-row row">
+      <div *ngIf="entries.length!=0" class="table-row row">
         <div class="table-element table-legend">Product</div>
         <div class="table-element table-legend">Quantity</div>
       </div>
-      <div class="table-element" style="font-style: italic; margin-left: 1.5vw;" *ngIf="entries.length==0">No products
+      <div class="table-element" style="font-style: italic; margin-left: 1.5vw; margin-top: 1vw;" *ngIf="entries.length==0">No products
         yet. Click the 'add products' button to start adding them to your recipe!
       </div>
       <div class="table-row row" *ngFor="let entry of entries">
@@ -45,7 +45,7 @@
     </div>
   </form>
 </div>
-<div class="form-submit">
+<div style="margin-top: 3vw;" class="form-submit">
   <button type="submit" id="createButton" (click)="save()">create</button>
 </div>
 <app-add-product-to-recipe class="add-products" [ngStyle]="{'display':displayAddProduct}"></app-add-product-to-recipe>
