--- a/src/app/recipe/recipe-overview/recipe-overview.component.scss
+++ b/src/app/recipe/recipe-overview/recipe-overview.component.scss
@@ -1,13 +1,4 @@
-.recipe-overview-container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 90vw;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-bottom: 5vw;
-  justify-content: space-between;
-}
+
 
 .title-search-bar {
   margin-top: 2vw;
@@ -25,18 +16,34 @@
   }
 }
 
+.recipe-overview-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 5vw;
+}
 
 .recipe-item {
   cursor: pointer;
   align-content: space-between;
   text-align: justify;
   text-justify: inter-word;
-  width: 20vw;
-  margin: 1.5vw 1.5vw;
+  width: 22vw;
+  margin: 1.5vw 1.75vw;
   padding: 2vw 2vw;
   border: 0.5px solid lightgrey;
   border-radius: 5px;
 
+  .recipe-item:first-of-type {
+  }
+
+  .recipe-item:last-of-type {
+    justify-self: flex-start;
+    float: left;
+  }
 
   .recipe-name {
     font-weight: bold;
@@ -60,8 +67,7 @@
 }
 
 .create-button {
-  position: fixed;
-  bottom: 5vw;
+
   margin-bottom: 2vw;
   color: var(--primary-color);
   border: 0.5px solid lightgrey;
@@ -74,4 +80,9 @@
   border: 0.5px solid var(--primary-color);
   box-shadow: 0 2px 4px 0 lightgrey;
   background: white;
+}
+
+.pagination-bar {
+  display: flex;
+  justify-content: center;
 }
