DEMO-Fix home redirection

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="navigation-bar">
-    <button class="navigation-button" routerLink=''>home</button>
+    <button class="navigation-button" routerLink='/'>home</button>
     <div class="dropdown">
       <button class="navigation-button" routerLink="shoppinglist-overview">Shoppinglists</button>
       <div class="dropdown-content">
