--- a/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
+++ b/src/app/shoppinglist/shopping-list-detail/shopping-list-detail.component.html
@@ -22,7 +22,7 @@
       <div class="add-button-row row">
         <button (click)="showAddProduct()">add products</button>
       </div>
-      <div routerLink="" class="back"><span style="user-select: none">< Back to shopping lists</span></div>
+      <div routerLink="/shoppinglist-overview" class="back"><span style="user-select: none">< Back to shopping lists</span></div>
 
     </div>
 
