S18-Add remove button to shopping list overview

--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.html
@@ -14,6 +14,7 @@
         <div class="shoppinglist-name table-element">{{shoppingList.name}}</div>
         <div class="table-button">
           <button routerLink="/shopping-list-detail/{{shoppingList.id}}">view</button>
+          <button (click)="delete(shoppingList.id)">remove</button>
         </div>
       </div>
       <div class="add-button-row row">
