S18-Add remove button to shopping list overview

--- a/src/app/recipe/recipe-overview/recipe-overview.component.html
+++ b/src/app/recipe/recipe-overview/recipe-overview.component.html
@@ -18,6 +18,9 @@
         <div class="recipe-description">{{ recipe.description.substring(0, 140)}}...</div>
         <div class="recipe-servings">Serving size: {{recipe.amountOfServings}}</div>
       </div>
+      <div class="button">
+        <button (click)="delete(recipe.id)">remove</button>
+      </div>
     </div>
   </div>
   <div class="pagination-bar">
