--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -29,6 +29,7 @@
     <div class="table-row row" *ngFor="let entry of recipe.entries">
       <div class="table-element">{{entry.product.name}}</div>
       <div class="table-element">{{entry.quantity}}</div>
+      <div class="table-element"><button (click)="removeEntry(recipe.id, entry.id)">remove</button></div>
     </div>
   </div>
 </div>
