--- a/src/app/recipe/recipe-overview/recipe-overview.component.html
+++ b/src/app/recipe/recipe-overview/recipe-overview.component.html
@@ -15,6 +15,8 @@
     <div *ngFor="let recipe of (recipes | orderBy:'name' | paginate: { itemsPerPage: 9, currentPage: page })">
       <div class="recipe-item" (click)="toRecipeDetail(recipe.id)">
         <div class="recipe-name">{{ recipe.name }}</div>
+        <div class="recipe-image"><img src="/assets/recipe-placeholder.jpg" width="85%" height="auto"
+                                       style="margin-left:auto; margin-right: auto"/></div>
         <div class="recipe-description">{{ recipe.description.substring(0, 140)}}...</div>
         <div class="recipe-servings">Serving size: {{recipe.amountOfServings}}</div>
       </div>
