S10-add recipe to shoppinglist

--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -32,5 +32,7 @@
     </div>
   </div>
 </div>
+<div class="bottom-buttons">
 <div class="back"><span routerLink="/recipe-overview" style="user-select: none">< Back to recipe overview</span></div>
-
+<div class="back"><span style="user-select: none">< Add to shoppinglist</span></div>
+</div>
