--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -12,6 +12,15 @@
       <span *ngIf="submitted && email.invalid && email.errors.required">Email address is required.</span>
       <span *ngIf="submitted && email.invalid && email.errors.pattern">Please provide a valid email address.</span>
     </div>
+    <h4>Password : </h4>
+    <div >
+      <label>
+        <input type="password" class="input-field" id="password" formControlName="password" (click)="resetErrors()" size=40px placeholder="password"/>
+      </label>
+    </div>
+    <div class="text-danger">
+      <span *ngIf="submitted && email.invalid && email.errors.required">Password is required.</span>
+    </div>
     <div class="form-submit">
       <button type="submit" id="createButton">create account</button>
     </div>
