--- a/src/app/authentication/create-account/create-account.component.html
+++ b/src/app/authentication/create-account/create-account.component.html
@@ -4,7 +4,7 @@
     <h4>Email : </h4>
     <div >
       <label>
-        <input class="input-field" id="email" formControlName="email" (click)="resetErrors()" size=40px placeholder="aaa@bbb.ccc"/>
+        <input class="input-field" autocomplete="username" id="email" formControlName="email" (click)="resetErrors()" size=40px placeholder="aaa@bbb.ccc"/>
       </label>
     </div>
     <div class="text-danger">
@@ -15,11 +15,11 @@
     <h4>Password : </h4>
     <div >
       <label>
-        <input type="password" class="input-field" id="password" formControlName="password" (click)="resetErrors()" size=40px placeholder="password"/>
+        <input type="password" autocomplete="current-password" formControlName="password" class="input-field" id="password" (click)="resetErrors()" size=40px placeholder="password"/>
       </label>
     </div>
     <div class="text-danger">
-      <span *ngIf="submitted && email.invalid && email.errors.required">Password is required.</span>
+      <span *ngIf="submitted && password.invalid && password.errors.required">Password is required.</span>
     </div>
     <div class="form-submit">
       <button type="submit" id="createButton">create account</button>
