--- a/src/app/authentication/logon/logon.component.html
+++ b/src/app/authentication/logon/logon.component.html
@@ -4,15 +4,21 @@
     <h4>Email : </h4>
     <div>
       <label>
-        <input class="input-field" id="emailLogon" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px placeholder="aaa@bbb.ccc"/>
+        <input class="input-field" autocomplete="username" id="emailLogon" formControlName="email" (click)="resetErrors()" (input)="validateEmailFormat()" size=40px placeholder="aaa@bbb.ccc"/>
       </label>
     </div>
-    <div class="text-danger">
-      <span *ngIf="submitted && errorMessage">{{errorMessage}}</span>
+    <h4>Password : </h4>
+    <div >
+      <label>
+        <input type="password" autocomplete="current-password" formControlName="password" class="input-field" id="passwordLogon" (click)="resetErrors()" size=40px placeholder="password"/>
+      </label>
     </div>
     <div class="form-submit">
       <button type="submit" name="connectButton" id="connectButton">login</button>
     </div>
   </form>
+  <div class="text-danger">
+    <span *ngIf="submitted && errorMessage">{{errorMessage}}</span>
+  </div>
 </div>
 
