--- a/src/app/recipe/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.scss
@@ -1,4 +1,6 @@
-
+.fade {
+  opacity: 0.1;
+}
 
 .recipe-detail-container {
   display: flex;
@@ -10,6 +12,7 @@
     width: 40%;
 
   }
+
   .section {
   }
 
@@ -37,6 +40,7 @@ textarea {
 .add-products {
 
 }
+
 .row {
   display: flex;
   justify-content: space-between;
@@ -59,13 +63,14 @@ textarea {
 }
 
 .bottom-buttons {
+  position: fixed;
+  bottom: 5vw;
   display: flex;
   justify-content: space-between;
+  width: 86vw;
 }
 
 .back {
-  position: fixed;
-  bottom: 5vw;
   margin-bottom: 2vw;
   color: var(--primary-color);
   border: 0.5px solid lightgrey;
@@ -79,3 +84,4 @@ textarea {
   box-shadow: 0 2px 4px 0 lightgrey;
 
 }
+
