CSS-3 refining menubar and shoppinglist overview

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,17 @@
 
 .menu-bar-container {
-  margin: 0 1rem;
+  margin: 0 2rem;
   position: sticky;
   top: 0;
   left: 0;
   height: 4vw;
   background: white;
   padding-bottom: 1vw;
+  margin-bottom: 2vw;
 }
 
 .content-container {
-  margin: 0 1rem;
+  margin: 0 9rem;
   height: auto;
   margin-bottom: 26vw;
   margin-left: auto;
@@ -20,7 +21,7 @@
 }
 
 .footer-bar-container {
-  width: 100vw;
+  width: 99.5vw;
   position: fixed;
   bottom: 0;
   background: var(--primary-color);
