--- a/src/app/footer-bar/footer-bar.component.html
+++ b/src/app/footer-bar/footer-bar.component.html
@@ -1,3 +1,3 @@
 <div class="footer-container">
-  <p class="copyright"> sh<span class="text-accent">o</span>ppr &#169; Malicious Hamsters - 2019</p>
+  <div class="copyright"> sh<span class="text-accent">o</span>ppr &#169; Malicious Hamsters - 2019</div>
 </div>
