--- a/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.scss
+++ b/src/app/shoppinglist/shopping-list-overview/shopping-list-overview.component.scss
@@ -1,6 +1,6 @@
 .overview-shoppinglist-container {
   color: var(--primary-font);
-  font-size: 16px;
+  font-size: 1.25vw;
 }
 
 
@@ -9,6 +9,7 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+
 
   .row {
     display: flex;
@@ -21,6 +22,7 @@
 
 .add-button-row {
   margin-top: 2vw;
+
   button, button:hover {
     font-size: 2vw;
     font-weight: bold;
@@ -42,3 +44,21 @@ button:hover {
   color: white;
   border: none;
 }
+
+.delete-button {
+  width: 2.25vw;
+  margin-right: 1vw;
+}
+
+.delete-button:hover {
+  width: 2.5vw;
+
+}
+.table-button {
+  max-width: 3vw;
+
+}
+.table-button:hover {
+  background: var(--table-backgrond);
+}
+
