--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,8 +66,8 @@ button:active, button:visited, button:focus, button:active:focus {
   font-weight: bold;
   font-size: 1.5vw;
   text-align: center;
-  padding: 1vw 0;
-  border-radius: 5px;
+  padding: 1.5vw 0;
+  border-radius: 3px;
 }
 
 .table-legend {
@@ -95,6 +95,7 @@ button:active, button:visited, button:focus, button:active:focus {
 
   .table-element:hover {
     background: var(--table-backgrond);
+    font-size: 1.5vw;
     color: white;
   }
 
@@ -121,4 +122,8 @@ button:active, button:visited, button:focus, button:active:focus {
 
 .text-accent {
   color: var(--primary-accent-color);
+}
+.bordered {
+  border: 0.5px solid rgba(190, 234, 248, 0.2);
+  border-radius: 9px;
 }
