CSS3 - fixed type-ahead bug

--- a/src/app/shoppinglist/add-product/add-product.component.html
+++ b/src/app/shoppinglist/add-product/add-product.component.html
@@ -1,9 +1,9 @@
-<div style="position: fixed; bottom: 10vw; width: 100%;">
+<div style="position: fixed; bottom: 20vw; width: 100%;">
   <div class="add-product-container" (clickOutside)="onClickedOutside($event)">
     <div class="cancel">
       <button (click)="close()">X</button>
     </div>
-    <form [formGroup]="addProductForm" (ngSubmit)="addProduct()">
+    <form [formGroup]="addProductForm" (ngSubmit)="addProduct()" autocomplete="off">
       <div class=" property">
         <div class="property-element">
           *Name :
@@ -15,9 +15,9 @@
                    (keyup)="searchProduct(searchBox.value)"
                    placeholder="name"/>
           </label>
-          <div>
+          <div class="found-products" *ngIf="showFoundProducts">
             <div *ngFor="let product of FoundProducts | async"
-                 (click)="searchBox.value = product.name" class="search-result" >
+                 (click)="setFieldValue(product.name); closeFoundList();" class="search-result">
               {{product.name}}
             </div>
           </div>
